# School-IBE

./: README.md
BPC-PC1T/su-din0/cv3/FunExt/: CMakeLists.txt  FunExt.cpp  FunExt.h
BPC-PC1T/su-din0/cv3/blesk-hrom/: CMakeLists.txt  blesk-hrom.cpp  blesk-hrom.h
BPC-PC1T/su-din0/cv3/obvod-obsah-ctverec/: CMakeLists.txt  obvod-obsah-ctverec.cpp  obvod-obsah-ctverec.h
BPC-PC1T/su-din0/cv4/prestupny-rok/: CMakeLists.txt  prestupny-rok.cpp  prestupny-rok.h
BPC-PC1T/su-din0/cv4/prvocislo/: CMakeLists.txt  prvocislo.cpp  prvocislo.h
BPC-PC1T/su-din0/cv5/soucet_velikost_soucin/: CMakeLists.txt  soucet_velikost_soucin.cpp  soucet_velikost_soucin.h  vektorovySoucin.cpp  vektorovySoucin.h
BPC-PC1T/su-din0/cv6/text_udaje/: CMakeLists.txt  text_udaje.cpp  text_udaje.h
BPC-PC1T/su-din0/cv7/body/: Body2d.cpp  Body2d.h  CMakeLists.txt  body.cpp  body.h
